--- a/HTML_CSS_JS/1.css
+++ b/HTML_CSS_JS/1.css
@@ -64,7 +64,8 @@ p{
 
 
 /* 如果使用者視窗寬度 <= 768px */
-@media screen and (max-width: 768px){
+/*@media screen and (max-width: 768px){*/
+@media (min-width: 768px) {
 	html,body{
 		background-color: #aaa;
 		width: 100%;
