--- a/HTML_CSS_JS/1.css
+++ b/HTML_CSS_JS/1.css
@@ -63,8 +63,28 @@ p{
 }
 
 
-/* 如果使用者視窗寬度 <= 768px */
-/*@media screen and (max-width: 768px){*/
+@media (max-width: 768px) {
+	html,body{
+		background-color: #aaa;
+		width: 100%;
+		height: 1300px;
+		margin: 0;
+		padding: 0;
+	}
+	.card{
+		width: 90%;
+		height: 1300px;
+		display: block;
+	}
+	.left{
+		width: 100%;
+	}
+	.right{
+		width: 90%;
+		height: 50%;
+	}
+}
+
 @media (min-width: 768px) {
 	html,body{
 		background-color: #aaa;
