--- a/HTML_CSS_JS/1.css
+++ b/HTML_CSS_JS/1.css
@@ -63,7 +63,7 @@ p{
 }
 
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
 	html,body{
 		background-color: #aaa;
 		width: 100%;
@@ -105,4 +105,4 @@ p{
 		width: 90%;
 		height: 50%;
 	}
-}
+}*/
