--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
 		background-color: #F6F7F2;
 	}
 
-@media (max-width: 768px) {
+/*@media (max-width: 992px) {
 	body {
 		background-color: #aaa;
 		overflow:hidden;
@@ -40,17 +40,7 @@
 	#top{
 		display:none;
 	}
-}
-
-@media (min-width: 768px) {
-	body {
-		background-color: #aaa;
-		overflow:hidden;
-	}
-	#top{
-		display:none;
-	}
-}
+}*/
 
 /*@media (min-width: 576px) {}*/
 
